--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -18,8 +18,7 @@
 
 @font-face {
   font-family: 'Noto Sans';
-  src: url('./font/notosans.woff2') format('woff2'),
-       url('./font/notosans.woff') format('woff');
+  src: url('./font/NotoSans-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: italic;
   font-display: fallback;
