--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -15,6 +15,10 @@ figure, blockquote, dl, dd {
   margin: 0;
 }
 
+a {
+  color: inherit;
+}
+
 ul[role='list'],
 ol[role='list'] {
   list-style: none;
