--- a/src/styles/color.css
+++ b/src/styles/color.css
@@ -7,6 +7,7 @@
   --tilt: #007A78;
   --greenLight: #F2FFE3;
   --shadow: #08213f2f;
+  --brown: #3F433A;
 
   --text-color-primary: var(--black);
   --text-color-secondary: var(--greenLight);
