--- a/src/styles/tokens.css
+++ b/src/styles/tokens.css
@@ -94,10 +94,11 @@
 
   --inputBorderWidth: calc(2 / 16 * 1rem);
   --buttonBorderRadius: calc(20 / 16 * 1rem);
+  --inputOutlineOffset: calc(6 / 16 * 1rem);
 
   /* Primitive | Transition */
 
-  --transitionSpeed: 0.5s;
+  --transitionSpeed: 0.3s;
 
   /* Primitive | Shadow */
 
