--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -29,6 +29,7 @@ h2 {
 
 .members h2, .description h2 {
   font-weight: var(--fontWeightLight);
+  font-size: var(--textFontSizePrimary);
 }
 
 .members > p, .signup h2+div > div:nth-child(1), .signup h2+div > div:nth-child(1) h3, footer a:only-child {
@@ -44,7 +45,7 @@ h2 {
 }
 
 header {
-  padding-block: var(--headerPadding);
+  padding-block: var(--headerPaddingTop) var(--headerPaddingBottom);
   
   text-align: center;
 }
@@ -69,7 +70,7 @@ header img {
 .members > div {
   display: flex;
 
-  margin-block: var(--membersMargin);
+  margin-block: var(--membersMarginTop) var(--membersMarginBottom);
   margin-inline: var(--centeringMargin);
 }
 
@@ -226,7 +227,7 @@ footer {
   color: var(--text-color-secondary);
 }
 
-footer, footer h2 {
+footer h2 {
   font-size: var(--footerFontSize);
 }
 
@@ -240,7 +241,11 @@ footer > div:nth-child(1) {
 
 footer > div:nth-child(2) {
   padding-block: var(--footerPaddingTop) var(--footerPaddingBottom);
+
   background-color: var(--background-secondary);
+
+  font-size: var(--signupNoteFontSize);
+  line-height: var(--lineHeightBig);
 }
 
 footer a {
