--- a/src/styles/breakpoints.css
+++ b/src/styles/breakpoints.css
@@ -37,7 +37,6 @@
   .description > div p {
     --descriptionTextWidth: 22.692307692307692em;
 
-    /* --textFontSizePrimary: 1.625rem; */
     --lineHeightDescription: 1.5;
   }
 }
@@ -136,7 +135,7 @@
   /* Header */
 
   header > div {
-    --headerWidth: calc(700 / 16 * 1rem);
+    --headerWidth: 43.75rem;
   }
 
   h1 {
@@ -193,8 +192,8 @@
   }
 
   header > div {
-    --headerWidth: calc(606 / 16 * 1rem);
-    --headerMargin: calc(40 / 16 * 1rem);
+    --headerWidth: 37.875rem;
+    --headerMargin: 2.5rem;
   }
 
   h1 {
@@ -234,17 +233,10 @@
     /* --textFontSizePrimary: 1.5rem; */
   }
 
-  /* Gallery */
-
-  .gallery {
-    --galleryPaddingTop: 2.75rem;
-    --galleryPaddingBottom: 5rem;
-  }
-
   /* Sing up */
 
   .signup {
-    --signupHeight: 29.625rem;
+    --signupHeight: calc(430 / 16 * 1rem);
     --signupPaddingTop: 2.75rem;
   }
 
@@ -260,11 +252,12 @@
   .signup form > div {
     --inputGroupMargin: 0.25rem;
   }
-}
 
-@media only screen and (max-width: calc(732 / 16 * 1rem)) {
-  .signup button {
-    --buttonBottom: 5rem;
+  /* Gallery */
+
+  .gallery {
+    --galleryPaddingTop: 2.75rem;
+    --galleryPaddingBottom: 5rem;
   }
 }
 
@@ -297,8 +290,8 @@
   }
 
   header > div {
-    --headerWidth: calc(700 / 16 * 1rem);
-    --headerMargin: calc(34 / 16 * 1rem);
+    --headerWidth: 33.125rem;
+    --headerMargin: 2.125rem;
   }
 
   h1 {
@@ -363,8 +356,8 @@
   }
 
   header > div {
-    --headerWidth: calc(530 / 16 * 1rem);
-    --headerMargin: calc(30 / 16 * 1rem);
+    --headerWidth: 23.875rem;
+    --headerMargin: 1.875rem;
   }
 
   h1 {
@@ -388,7 +381,6 @@
   }
 
   .description-text p {
-    /* --textFontSizePrimary: 1.125rem; */
     --lineHeightDescription: 1.3;
   }
 
@@ -410,13 +402,8 @@
     --labelMargin: 0.25rem;
   }
 
-  .signup form p:nth-of-type(2) {
-    --signupNoteFontSize: 1.125rem;
-  }
-
   .signup [aria-live] p {
     margin-inline-end: 0.25rem;
-    --signupNoteFontSize: 1.125rem;
   }
 
   /* Gallery */
@@ -538,14 +525,11 @@
 
   .signup form p:nth-of-type(2) {
     --singupNoteMargin: 5.3125rem;
-    --signupNoteFontSize: 1.25rem;
-  }
-
-  .signup [aria-live] p {
-    --signupNoteFontSize: 1.25rem;
   }
 
   .signup button {
+    --buttonBottom: calc(114 / 16 * 1rem);
+
     --buttonPaddingBlock: 0.4375rem;
     --buttonPaddingInline: 1.5rem;
 
@@ -621,16 +605,32 @@
 }
 
 @media only screen and (max-width: calc(415 / 16 * 1rem)) {
-  .signup {
+  /* .signup {
     --signupHeight: 23.75rem;
+  } */
+
+  .signup {
+    --signupHeight: calc(460 / 16 * 1rem); 
   }
 
   .signup form p:nth-of-type(2) {
-    --signupNoteFontSize: 1rem;
+    --singupNoteMargin: calc(70 / 16 * 1rem);
+    /* --signupNoteFontSize: 1.25rem; */
   }
 
   .signup [aria-live] p {
     --signupNoteFontSize: 1rem;
+  }
+
+  .signup button {
+    --buttonBottom: calc(102 / 16 * 1rem);
+  }
+
+}
+
+@media only screen and (max-width: calc(332 / 16 * 1rem)) {
+  .signup button {
+    --buttonBottom: calc(80 / 16 * 1rem);
   }
 }
 
@@ -653,389 +653,8 @@
   }
 }
 
-/* Header */
-
-/* @media only screen and (max-width: calc(770 / 16 * 1rem)) {
-  header {
-    --headerPaddingBottom: calc(80 / 16 * 1rem);
+@media only screen and (max-width: calc(296 / 16 * 1rem)) {
+  .signup {
+    --signupHeight: calc(486 / 16 * 1rem); 
   }
-} */
-
-/* @media only screen and (max-width: calc(680 / 16 * 1rem)) {
-  header {
-    --headerPaddingTop: calc(60 / 16 * 1rem);
-    --headerPaddingBottom: calc(50 / 16 * 1rem);
-  }
-} */
-
-/* @media only screen and (max-width: calc(590 / 16 * 1rem)) {
-  header {
-    --headerPaddingTop: calc(44 / 16 * 1rem);
-    --headerPaddingBottom: calc(40 / 16 * 1rem);
-  }
-} */
-
-
-
-/**/
-
-
-
-/* @media only screen and (max-width: calc(770 / 16 * 1rem)) {
-  header > div {
-    --headerWidth: calc(606 / 16 * 1rem);
-    --headerMargin: calc(40 / 16 * 1rem);
-  }
-} */
-
-/* @media only screen and (max-width: calc(680 / 16 * 1rem)) {
-  header > div {
-    --headerWidth: calc(700 / 16 * 1rem);
-    --headerMargin: calc(34 / 16 * 1rem);
-  }
-} */
-
-/* @media only screen and (max-width: calc(590 / 16 * 1rem)) {
-  header > div {
-    --headerWidth: calc(530 / 16 * 1rem);
-    --headerMargin: calc(30 / 16 * 1rem);
-  }
-} */
-
-/* @media only screen and (max-width: calc(460 / 16 * 1rem)) {
-  header > div {
-    --headerWidth: calc(290 / 16 * 1rem);
-    --headerMargin: calc(35 / 16 * 1rem);
-  }
-} */
-
-
-
-/**/
-
-/* @media only screen and (max-width: calc(900 / 16 * 1rem)) {
-  h1 {
-    --mainHeadingMargin: 1.8125rem;
-    --mainHeadingFontSize: 3.375rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(770 / 16 * 1rem)) {
-  h1 {
-    --mainHeadingMargin: 1.875rem;
-    --mainHeadingFontSize: 2.875rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(680 / 16 * 1rem)) {
-  h1 {
-    --mainHeadingMargin: 2.375rem;
-    --mainHeadingFontSize: 2.25rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(590 / 16 * 1rem)) {
-  h1 {
-    --mainHeadingMargin: 1rem;
-    --mainHeadingFontSize: 1.875rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(460 / 16 * 1rem)) {
-  h1 {
-    --mainHeadingFontSize: 1.4375rem;
-  }
-} */
-
-/**/
-
-/* @media only screen and (max-width: calc(900 / 16 * 1rem)) {
-  header img {
-    --logoWidth: 8.125rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(770 / 16 * 1rem)) {
-  header img {
-    --logoWidth: 7.5rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(590 / 16 * 1rem)) {
-  header img {
-    --logoWidth: 4.375rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(460 / 16 * 1rem)) {
-  header img {
-    --logoWidth: 3.4375rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(320 / 16 * 1rem)) {
-  header img {
-    --logoWidth: 19.097222222222222%;
-  }
-} */
-
-/* Members */
-
-
-
-
-
-/* @media only screen and (max-width: calc(900 / 16 * 1rem)) {
-  .members > div {
-    --membersMarginBottom: 0.75rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(770 / 16 * 1rem)) {
-  .members > div {
-    --membersMarginBottom: 0.625rem;
-  }
-} */
-
-
-
-/* @media only screen and (max-width: calc(440 / 16 * 1rem)) {
-  .members > div {
-    --membersMarginBottom: 0.25rem;
-  }
-} */
-
-/**/
-
-
-
-
-
-/* @media only screen and (max-width: calc(600 / 16 * 1rem)) {
-  .members > div > div {
-    flex-basis: var(--memberPhotoWidth600);
-  }
-  
-  .members > div > div:first-child, 
-  .members > div > div:nth-child(2), 
-  .members > div > div:nth-child(3), 
-  .members > div > div:nth-child(4) {
-    margin-bottom: var(--memberPhotoMarginBottom600);
-  }
-} */
-
-/**/
-
-/* @media only screen and (max-width: calc(1200 / 16 * 1rem)) {
-  .members > div > div:first-child {
-    --memberPhotoMargin: 0.5rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(940 / 16 * 1rem)) {
-  .members > div > div:first-child {
-    --memberPhotoMargin: 0.25rem;
-  }
-} */
-
-/**/
-
-/* @media only screen and (max-width: calc(1070 / 16 * 1rem)) {
-  .members > p {
-    --textFontSizeSecondary: 2.375rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(960 / 16 * 1rem)) {
-
-  .members > p {
-    --textFontSizeSecondary: 2.125rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(770 / 16 * 1rem)) {
-  .members > p {
-    --textFontSizeSecondary: 1.875rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(440 / 16 * 1rem)) {
-  .members > p {
-    --textFontSizeSecondary: 1.625rem;
-  }
-} */
-
-/**/
-
-/* @media only screen and (max-width: calc(770 / 16 * 1rem)) {
-  .description {
-    --descriptionPaddingTop: 3.75rem;
-    --descriptionPaddingBottom: 3.5rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(680 / 16 * 1rem)) {
-  .description {
-    --descriptionPaddingTop: 2.375rem;
-    --descriptionPaddingBottom: 3rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(590 / 16 * 1rem)) {
-  .description {
-    --descriptionPaddingTop: 1.875rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(440 / 16 * 1rem)) {
-  .description {
-    --descriptionPaddingTop: 1rem;
-    --descriptionPaddingBottom: 1.875rem;
-  }
-} */
-
-/**/
-
-/* @media only screen and (max-width: calc(1100 / 16 * 1rem)) {
-  .description h2 + p {
-    --descriptionFontSizeBig: 2.5rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(900 / 16 * 1rem)) {
-  .description h2 + p {
-    --descriptionMarginInside: 3.75rem;
-    --descriptionFontSizeBig: 2.25rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(770 / 16 * 1rem)) {
-  .description h2 + p {
-    --descriptionMarginInside: 2.5rem;
-    --descriptionFontSizeBig: 1.75rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(680 / 16 * 1rem)) {
-  .description h2 + p {
-    --descriptionMarginInside: 1.875rem;
-    --descriptionFontSizeBig: 1.5rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(590 / 16 * 1rem)) {
-  .description h2 + p {
-    --descriptionMarginInside: 1.75rem;
-    --descriptionFontSizeBig: 1.375rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(440 / 16 * 1rem)) {
-  .description h2 + p {
-    --descriptionMarginInside: 1.375rem;
-    --descriptionFontSizeBig: 1.25rem;
-  }
-} */
-
-/**/
-
-/* @media only screen and (max-width: calc(1100 / 16 * 1rem)) {
-  .description > div p {
-    --descriptionTextWidth: 22.692307692307692em; */
-
-    /* --textFontSizePrimary: 1.625rem; */
-    /* --lineHeightDescription: 1.5;
-  }
-} */
-
-/* @media only screen and (max-width: calc(770 / 16 * 1rem)) {
-  .description > div p {
-    --descriptionTextWidth: 22.5em; */
-
-    /* --textFontSizePrimary: 1.5rem; */
-  /* }
-} */
-
-/* @media only screen and (max-width: 42.5rem) {
-  .description-text p {
-    --textFontSizePrimary: 1.25rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(590 / 16 * 1rem)) {
-  .description-text p { */
-    /* --textFontSizePrimary: 1.125rem; */
-    /* --lineHeightDescription: 1.3;
-  }
-} */
-
-/* @media only screen and (max-width: calc(440 / 16 * 1rem)) {
-  .description > div p {
-    --descriptionTextWidth: 18.125em; */
-    /* --textFontSizePrimary: 1rem; */
-    /* --lineHeightDescription: 1.2;
-  }
-} */
-
-/* @media only screen and (max-width: calc(320 / 16 * 1rem)) {
-  .description > div p {
-    --descriptionTextWidth: 100%;
-  }
-} */
-
-/* Gallery */
-
-/* @media screen and (max-width: calc(770 / 16 * 1rem)) {
-  .gallery {
-    --galleryPaddingTop: 2.75rem;
-    --galleryPaddingBottom: 5rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(590 / 16 * 1rem)) {
-  .gallery {
-    --galleryPaddingBottom: 3.75rem;
-  }
-} */
-
-
-
-/**/
-
-/* @media only screen and (max-width: calc(590 / 16 * 1rem)) {
-  .gallery h2 {
-    --textFontSizePrimary: 1.4375rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(440 / 16 * 1rem)) {
-  .gallery h2 {
-    --textFontSizePrimary: 1.3125rem;
-  }
-} */
-
-/**/
-
-/* @media only screen and (max-width: calc(900 / 16 * 1rem)) {
-  .gallery > div {
-    --galleryMargin: 3.5rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(700 / 16 * 1rem)) {
-  .gallery > div {
-    --galleryMargin: 2.5rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(600 / 16 * 1rem)) {
-  .gallery > div {
-    --galleryMargin: 2.125rem;
-  }
-} */
-
-/* @media only screen and (max-width: calc(440 / 16 * 1rem)) {
-  .gallery > div {
-    --galleryMargin: 1.75rem;
-  }
-} */
+}
