--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -55,6 +55,7 @@ header {
 header > div {
   display: flex;
   justify-content: center;
+  align-items: center;
 
   width: var(--headerWidth);
   margin-inline: var(--centeringMargin);
