Fix fonts for safari (remove font-style)

--- a/src/styles/font.css
+++ b/src/styles/font.css
@@ -3,7 +3,6 @@
   src: url('./font/mclaren.woff2') format('woff2'),
        url('./font/mclaren.woff') format('woff');
   font-weight: normal;
-  font-style: normal;
   font-display: fallback;
 }
 
@@ -12,14 +11,12 @@
   src: url('./font/nanumpenscript.woff2') format('woff2'),
        url('./font/nanumpenscript.woff') format('woff');
   font-weight: normal;
-  font-style: italic;
-  font-display: fallback;
+  /* font-display: fallback; */
 }
 
 @font-face {
   font-family: 'Noto Sans';
   src: url('./font/NotoSans-Light.ttf') format('truetype');
   font-weight: 300;
-  font-style: italic;
-  font-display: fallback;
+  /* font-display: fallback; */
 }
